# thesis-ad

./: .gitignore
algorithms/AnomalyDINO/: run_anomalydino.py  run_anomalydino_batched.py  run_anomalydino_no_pixel.py  run_anomalydino_no_pixel.sh
algorithms/AnomalyDINO/src/: backbones.py  detection.py  hough_masking.py  post_eval.py  utils.py  visualize.py
algorithms/AnomalyGPT/: CPU_SETUP.md  requirements.txt  setup_cpu.sh
algorithms/AnomalyGPT/code/: test_cpu_simple.py
algorithms/UniVAD/: README.md  UniVAD.py  modules.py  segment_components.py  segment_single_class.py  segment_single_class.sh  test_univad.py  test_univad_no_pixel.py  test_univad_no_pixel.sh
algorithms/UniVAD/data/: cognex_solver.py  mvtec_solver.py  sick_solver.py
algorithms/UniVAD/datasets/: cognex.py  sick.py
dataset-creation/Dataset-creation/Gemini_class/: detect_defects.py  detect_defects_02.py  detect_defects_floor.py  detect_defects_floor_02.py  detect_leakage.py  pyproject.toml
dataset-creation/Dataset-creation/Gemini_class/Sick_dataset/: issues.txt
dataset-creation/Dataset-creation/Gemini_class/Sick_dataset/scripts/: 01_build_staging.py  02_enrich_from_dwh.py  generate_report.py  generate_report_all.py  generate_report_leakage.py  get_sku_supply_chain_photo.py  label_fotos.py  llm_models.py  update_gt.py
dataset-creation/Dataset-creation/Gemini_class/Sick_dataset/sql/: article_info.sql
dataset-creation/Dataset-creation/Gemini_class/Sick_dataset/utils/: crop.py  test_crop.py
dataset-creation/Dataset-creation/Gemini_class/config/: config-nl-local.yml
(+55 files in other folders)
